update bot